[Fix] Write contents

--- a/FinalProject/Report/main.bib
+++ b/FinalProject/Report/main.bib
@@ -8,3 +8,29 @@
       url={https://arxiv.org/abs/2304.02643}, 
 }
 
+@misc{SlimSAM,
+      title={SlimSAM: 0.1\% Data Makes Segment Anything Slim}, 
+      author={Zigeng Chen and Gongfan Fang and Xinyin Ma and Xinchao Wang},
+      year={2024},
+      eprint={2312.05284},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2312.05284}, 
+}
+
+@misc{Depth-Anyting-V2,
+      title={Depth Anything V2}, 
+      author={Lihe Yang and Bingyi Kang and Zilong Huang and Zhen Zhao and Xiaogang Xu and Jiashi Feng and Hengshuang Zhao},
+      year={2024},
+      eprint={2406.09414},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2406.09414}, 
+}
+
+@inproceedings{NYU-Depth-V2-Dataset,
+  author    = {Nathan Silberman, Derek Hoiem, Pushmeet Kohli and Rob Fergus},
+  title     = {Indoor Segmentation and Support Inference from RGBD Images},
+  booktitle = {ECCV},
+  year      = {2012}
+}
