--- a/FinalProject/Report/main.tex
+++ b/FinalProject/Report/main.tex
@@ -22,16 +22,12 @@
 
 % If accepted, instead use the following line for the camera-ready submission:
 \usepackage[accepted]{icml2024}
-
-% The \icmltitle you define below is probably too long as a header.
-% Therefore, a short form for the running title is supplied here:
-\icmltitlerunning{COSE474-2024F: Final Project Proposal}
+\icmltitlerunning{COSE474-2024F: Final Project}
 
 \begin{document}
 
 \twocolumn[
-\icmltitle{COSE474-2024F: Final Project \\
-           Monocular Depth Estimatioin with Segment Anything}
+\icmltitle{Monocular Depth Estimation with Segment Anything Model}
 
 % It is OKAY to include author information, even for blind
 % submissions: the style file will automatically remove it for you
@@ -54,7 +50,6 @@
 
 %\icmlaffiliation{ku}{Department of Computer Science \& Engineering, Korea University, Seoul, Korea}
 
-
 %\icmlcorrespondingauthor{the}{myemail@korea.ac.kr}
 %\icmlcorrespondingauthor{Eee Pppp}{ep@eden.co.uk}
 
@@ -68,555 +63,157 @@
 
 % this must go after the closing bracket ] following \twocolumn[ ...
 
-% This command actually creates the footnote in the first column
-% listing the affiliations and the copyright notice.
-% The command takes one argument, which is text to display at the start of the footnote.
-% The \icmlEqualContribution command is standard text for equal contribution.
-% Remove it (just {}) if you do not need this facility.
+\section{Introduction}
 
-%\printAffiliationsAndNotice{}  % leave blank if no need to mention equal contribution
-%\printAffiliationsAndNotice{\icmlEqualContribution} % otherwise use the standard text.
+\subsection{Motivation}
 
-%\begin{abstract}
-%This document provides a basic paper template and submission guidelines.
-%Abstracts must be a single paragraph, ideally between 4--6 sentences long.
-%Gross violations will trigger corrections at the camera-ready phase.
-%\end{abstract}
+Monocular depth estimation is a crucial task in computer vision with applications in various fields such as autonomous driving, robotics, and augmented reality. But recovering 3D information from single image remains challenging due to data ambiguity and model limitations.
 
-Evaluation (2024) – KOR or ENG
+The Segment Anything Model (SAM) \cite{SAM} demonstrates strong object segmentation capabilities, and we hypothesize its encoder can provide valuable features for depth estimation by associating similar depths within objects and distinguishing discontinuities at boundaries. This study explores the potential of utilizing the pre-trained encoder from SAM for monocular depth estimation.
 
-basic points (overall) (2): 
+By investigating its applicability in this context, we aim to assess whether SAM's capabilities can effectively address the existing challenges in depth estimation and pave the way for more efficient and precise 3D scene understanding. In conclusion, we suggest that while SAM provides a strong foundation, its application to depth estimation tasks requires careful consideration and further adaptations to overcome its inherent limitations.
 
-length (0.5), format (0.5), clarity of writing (1)
+\subsection{Problem definition}
 
-\section{Introduction (5)}
+An image can contain one or more objects and can have several information about the objects. One of them is information about the depth, and our goal is to predict the depth from a single RGB image.
 
-\subsection{motivation (2)}
-
-\subsection{problem definition (2)}
-
-\subsection{concise description of contribution (1)}
-
-\section{Methods (5)}
-
-\subsection{significance/novelty (2)}
-
-\subsection{figure (1)}
-
-\subsection{reproducibility and algorithm (2)}
-
-\section{Experiments (7)}
-
-\subsection{dataset (1)}
-
-\subsection{computer resource (CPU,GPU, OS, pytorch etc.) (1)}
-
-\subsection{experimental design (1)}
-
-\subsection{quantitative results (1)}
-
-\subsection{qualitative results (1)}
-
-\subsection{Figures (plots)/Tables and their analysis (2)}
-
-\subsection{Analysis}
-
-Analysis of figures and tables
-
-Discussion of Why the proposed method is successful or unsuccessful (1)
-
-\section{Discussion}
-
-\subsection{Future direction (1)}
-
-\bibliography{icml2024/main}
-\bibliographystyle{icml2024}
-\clearpage
-
-\textcolor{blue}{The following is the author guideline of ICML. You can delete all.} \newline
-Submission to ICML 2019 will be entirely electronic, via a web site
-(not email). Information about the submission process and \LaTeX\ templates
-are available on the conference web site at:
-\begin{center}
-\textbf{\texttt{http://icml.cc/}}
-\end{center}
-
-The guidelines below will be enforced for initial submissions and
-camera-ready copies. Here is a brief summary:
-\begin{itemize}
-\item Submissions must be in PDF\@.
-\item Submitted papers can be up to eight pages long, not including references, and up to twelve pages when references and acknowledgments are included. Any paper exceeding this length will automatically be rejected.
-\item \textbf{Do not include author information or acknowledgements} in your
-    initial submission.
-\item Your paper should be in \textbf{10 point Times font}.
-\item Make sure your PDF file only uses Type-1 fonts.
-\item Place figure captions \emph{under} the figure (and omit titles from inside
-    the graphic file itself). Place table captions \emph{over} the table.
-\item References must include page numbers whenever possible and be as complete
-    as possible. Place multiple citations in chronological order.
-\item Do not alter the style template; in particular, do not compress the paper
-    format by reducing the vertical spaces.
-\item Keep your abstract brief and self-contained, one paragraph and roughly
-    4--6 sentences. Gross violations will require correction at the
-    camera-ready phase. The title should have content words capitalized.
-\end{itemize}
-
-\subsection{Submitting Papers}
-
-\textbf{Paper Deadline:} The deadline for paper submission that is
-advertised on the conference website is strict. If your full,
-anonymized, submission does not reach us on time, it will not be
-considered for publication.
-
-\textbf{Anonymous Submission:} ICML uses double-blind review: no identifying
-author information may appear on the title page or in the paper
-itself. Section~\ref{author info} gives further details.
-
-\textbf{Simultaneous Submission:} ICML will not accept any paper which,
-at the time of submission, is under review for another conference or
-has already been published. This policy also applies to papers that
-overlap substantially in technical content with conference papers
-under review or previously published. ICML submissions must not be
-submitted to other conferences during ICML's review period. Authors
-may submit to ICML substantially different versions of journal papers
-that are currently under review by the journal, but not yet accepted
-at the time of submission. Informal publications, such as technical
-reports or papers in workshop proceedings which do not appear in
-print, do not fall under these restrictions.
-
-\medskip
-
-Authors must provide their manuscripts in \textbf{PDF} format.
-Furthermore, please make sure that files contain only embedded Type-1 fonts
-(e.g.,~using the program \texttt{pdffonts} in linux or using
-File/DocumentProperties/Fonts in Acrobat). Other fonts (like Type-3)
-might come from graphics files imported into the document.
-
-Authors using \textbf{Word} must convert their document to PDF\@. Most
-of the latest versions of Word have the facility to do this
-automatically. Submissions will not be accepted in Word format or any
-format other than PDF\@. Really. We're not joking. Don't send Word.
-
-Those who use \textbf{\LaTeX} should avoid including Type-3 fonts.
-Those using \texttt{latex} and \texttt{dvips} may need the following
-two commands:
-
-{\footnotesize
-\begin{verbatim}
-dvips -Ppdf -tletter -G0 -o paper.ps paper.dvi
-ps2pdf paper.ps
-\end{verbatim}}
-It is a zero following the ``-G'', which tells dvips to use
-the config.pdf file. Newer \TeX\ distributions don't always need this
-option.
-
-Using \texttt{pdflatex} rather than \texttt{latex}, often gives better
-results. This program avoids the Type-3 font problem, and supports more
-advanced features in the \texttt{microtype} package.
-
-\textbf{Graphics files} should be a reasonable size, and included from
-an appropriate format. Use vector formats (.eps/.pdf) for plots,
-lossless bitmap formats (.png) for raster graphics with sharp lines, and
-jpeg for photo-like images.
-
-The style file uses the \texttt{hyperref} package to make clickable
-links in documents. If this causes problems for you, add
-\texttt{nohyperref} as one of the options to the \texttt{icml2019}
-usepackage statement.
-
-
-\subsection{Submitting Final Camera-Ready Copy}
-
-The final versions of papers accepted for publication should follow the
-same format and naming convention as initial submissions, except that
-author information (names and affiliations) should be given. See
-Section~\ref{final author} for formatting instructions.
-
-The footnote, ``Preliminary work. Under review by the International
-Conference on Machine Learning (ICML). Do not distribute.'' must be
-modified to ``\textit{Proceedings of the
-$\mathit{36}^{th}$ International Conference on Machine Learning},
-Long Beach, USA, 2019.
-Copyright 2019 by the author(s).''
-
-For those using the \textbf{\LaTeX} style file, this change (and others) is
-handled automatically by simply changing
-$\mathtt{\backslash usepackage\{icml2019\}}$ to
-$$\mathtt{\backslash usepackage[accepted]\{icml2019\}}$$
-Authors using \textbf{Word} must edit the
-footnote on the first page of the document themselves.
-
-Camera-ready copies should have the title of the paper as running head
-on each page except the first one. The running title consists of a
-single line centered above a horizontal rule which is $1$~point thick.
-The running head should be centered, bold and in $9$~point type. The
-rule should be $10$~points above the main text. For those using the
-\textbf{\LaTeX} style file, the original title is automatically set as running
-head using the \texttt{fancyhdr} package which is included in the ICML
-2019 style file package. In case that the original title exceeds the
-size restrictions, a shorter form can be supplied by using
-
-\verb|\icmltitlerunning{...}|
-
-just before $\mathtt{\backslash begin\{document\}}$.
-Authors using \textbf{Word} must edit the header of the document themselves.
-
-\section{Format of the Paper}
-
-All submissions must follow the specified format.
-
-\subsection{Length and Dimensions}
-
-Submitted papers can be up to eight pages long, not including references, and up to twelve pages when references and acknowledgments are included.
-Acknowledgements should be limited to grants and people who contributed to the paper.
-Any submission that exceeds
-this page limit, or that diverges significantly from the specified format,
-will be rejected without review.
-
-The text of the paper should be formatted in two columns, with an
-overall width of 6.75~inches, height of 9.0~inches, and 0.25~inches
-between the columns. The left margin should be 0.75~inches and the top
-margin 1.0~inch (2.54~cm). The right and bottom margins will depend on
-whether you print on US letter or A4 paper, but all final versions
-must be produced for US letter size.
-
-The paper body should be set in 10~point type with a vertical spacing
-of 11~points. Please use Times typeface throughout the text.
-
-\subsection{Title}
-
-The paper title should be set in 14~point bold type and centered
-between two horizontal rules that are 1~point thick, with 1.0~inch
-between the top rule and the top edge of the page. Capitalize the
-first letter of content words and put the rest of the title in lower
-case.
-
-\subsection{Author Information for Submission}
-\label{author info}
-
-ICML uses double-blind review, so author information must not appear. If
-you are using \LaTeX\/ and the \texttt{icml2024.sty} file, use
-\verb+\icmlauthor{...}+ to specify authors and \verb+\icmlaffiliation{...}+ to specify affiliations. (Read the TeX code used to produce this document for an example usage.) The author information
-will not be printed unless \texttt{accepted} is passed as an argument to the
-style file.
-Submissions that include the author information will not
-be reviewed.
-
-\subsubsection{Self-Citations}
-
-If you are citing published papers for which you are an author, refer
-to yourself in the third person. In particular, do not use phrases
-that reveal your identity (e.g., ``in previous work \cite{langley00}, we
-have shown \ldots'').
-
-Do not anonymize citations in the reference section. The only exception are manuscripts that are
-not yet published (e.g., under submission). If you choose to refer to
-such unpublished manuscripts \cite{anonymous}, anonymized copies have
-to be submitted
-as Supplementary Material via CMT\@. However, keep in mind that an ICML
-paper should be self contained and should contain sufficient detail
-for the reviewers to evaluate the work. In particular, reviewers are
-not required to look at the Supplementary Material when writing their
-review.
-
-\subsubsection{Camera-Ready Author Information}
-\label{final author}
-
-If a paper is accepted, a final camera-ready copy must be prepared.
-%
-For camera-ready papers, author information should start 0.3~inches below the
-bottom rule surrounding the title. The authors' names should appear in 10~point
-bold type, in a row, separated by white space, and centered. Author names should
-not be broken across lines. Unbolded superscripted numbers, starting 1, should
-be used to refer to affiliations.
-
-Affiliations should be numbered in the order of appearance. A single footnote
-block of text should be used to list all the affiliations. (Academic
-affiliations should list Department, University, City, State/Region, Country.
-Similarly for industrial affiliations.)
-
-Each distinct affiliations should be listed once. If an author has multiple
-affiliations, multiple superscripts should be placed after the name, separated
-by thin spaces. If the authors would like to highlight equal contribution by
-multiple first authors, those authors should have an asterisk placed after their
-name in superscript, and the term ``\textsuperscript{*}Equal contribution"
-should be placed in the footnote block ahead of the list of affiliations. A
-list of corresponding authors and their emails (in the format Full Name
-\textless{}email@domain.com\textgreater{}) can follow the list of affiliations.
-Ideally only one or two names should be listed.
-
-A sample file with author names is included in the ICML2024 style file
-package. Turn on the \texttt{[accepted]} option to the stylefile to
-see the names rendered. All of the guidelines above are implemented
-by the \LaTeX\ style file.
-
-\subsection{Abstract}
-
-The paper abstract should begin in the left column, 0.4~inches below the final
-address. The heading `Abstract' should be centered, bold, and in 11~point type.
-The abstract body should use 10~point type, with a vertical spacing of
-11~points, and should be indented 0.25~inches more than normal on left-hand and
-right-hand margins. Insert 0.4~inches of blank space after the body. Keep your
-abstract brief and self-contained, limiting it to one paragraph and roughly 4--6
-sentences. Gross violations will require correction at the camera-ready phase.
-
-\subsection{Partitioning the Text}
-
-You should organize your paper into sections and paragraphs to help
-readers place a structure on the material and understand its
-contributions.
-
-\subsubsection{Sections and Subsections}
-
-Section headings should be numbered, flush left, and set in 11~pt bold
-type with the content words capitalized. Leave 0.25~inches of space
-before the heading and 0.15~inches after the heading.
-
-Similarly, subsection headings should be numbered, flush left, and set
-in 10~pt bold type with the content words capitalized. Leave
-0.2~inches of space before the heading and 0.13~inches afterward.
-
-Finally, subsubsection headings should be numbered, flush left, and
-set in 10~pt small caps with the content words capitalized. Leave
-0.18~inches of space before the heading and 0.1~inches after the
-heading.
-
-Please use no more than three levels of headings.
-
-\subsubsection{Paragraphs and Footnotes}
-
-Within each section or subsection, you should further partition the
-paper into paragraphs. Do not indent the first line of a given
-paragraph, but insert a blank line between succeeding ones.
-
-You can use footnotes\footnote{Footnotes
-should be complete sentences.} to provide readers with additional
-information about a topic without interrupting the flow of the paper.
-Indicate footnotes with a number in the text where the point is most
-relevant. Place the footnote in 9~point type at the bottom of the
-column in which it appears. Precede the first footnote in a column
-with a horizontal rule of 0.8~inches.\footnote{Multiple footnotes can
-appear in each column, in the same order as they appear in the text,
-but spread them across columns and pages if possible.}
+Given a single RGB image $ I \in R^{ H \times W \times 3 } $, the task is to estimate a depth map $ D \in R^{ H \times W } $. Our goal is to find a function $ f: I \rightarrow D $ that maps input image to depth map.
 
 \begin{figure}[ht]
-\vskip 0.2in
-\begin{center}
-\centerline{\includegraphics[width=\columnwidth]{icml_numpapers}}
-\caption{Historical locations and number of accepted papers for International
-Machine Learning Conferences (ICML 1993 -- ICML 2008) and International
-Workshops on Machine Learning (ML 1988 -- ML 1992). At the time this figure was
-produced, the number of accepted papers for ICML 2008 was unknown and instead
-estimated.}
-\label{icml-historical}
-\end{center}
-\vskip -0.2in
+\centering
+\includegraphics[width=0.5\textwidth]{monocular-depth-estimation.png}
+\label{fig:model-comparison}
 \end{figure}
 
-\subsection{Figures}
+\section{Methods}
 
-You may want to include figures in the paper to illustrate
-your approach and results. Such artwork should be centered,
-legible, and separated from the text. Lines should be dark and at
-least 0.5~points thick for purposes of reproduction, and text should
-not appear on a gray background.
+\subsection{Model architecture}
 
-Label all distinct components of each figure. If the figure takes the
-form of a graph, then give a name for each axis and include a legend
-that briefly describes each curve. Do not include a title inside the
-figure; instead, the caption should serve this function.
+The given image is encoded using SAM encoder to generate a feature map. Specifically, we utilize SlimSAM \cite{SlimSAM}, a variant of SAM, to enable faster computation. The feature map is then decoded into a depth map through residual connections and transposed convolutions. The output depth map is resized to match the target size using bilinear interpolation. Finally, a loss function is applied to compare the predictions with the ground truth. Mean Squared Error (MSE) is used as a loss function for simplicity.
 
-Number figures sequentially, placing the figure number and caption
-\emph{after} the graphics, with at least 0.1~inches of space before
-the caption and 0.1~inches after it, as in
-Figure~\ref{icml-historical}. The figure caption should be set in
-9~point type and centered unless it runs two or more lines, in which
-case it should be flush left. You may float figures to the top or
-bottom of a column, and you may set wide figures across both columns
-(use the environment \texttt{figure*} in \LaTeX). Always place
-two-column figures at the top or bottom of the page.
+\begin{figure}[ht]
+\centering
+\includegraphics[width=0.45\textwidth]{model-figure.png}
+\caption{Model Architecture}
+\label{fig:model-architecture}
+\end{figure}
 
-\subsection{Algorithms}
+\begin{algorithm}[]
+\caption{Depth Estimation Using SAM Encoder and CNN Decoder}
 
-If you are using \LaTeX, please use the ``algorithm'' and ``algorithmic''
-environments to format pseudocode. These require
-the corresponding stylefiles, algorithm.sty and
-algorithmic.sty, which are supplied with this package.
-Algorithm~\ref{alg:example} shows an example.
+\begin{algorithmic}[1]
+\REQUIRE Input image $I$ of size $H \times W \times 3$
+\ENSURE Estimated depth map $\hat{D}$ of size $H \times W$.
 
-\begin{algorithm}[tb]
-   \caption{Bubble Sort}
-   \label{alg:example}
-\begin{algorithmic}
-   \STATE {\bfseries Input:} data $x_i$, size $m$
-   \REPEAT
-   \STATE Initialize $noChange = true$.
-   \FOR{$i=1$ {\bfseries to} $m-1$}
-   \IF{$x_i > x_{i+1}$}
-   \STATE Swap $x_i$ and $x_{i+1}$
-   \STATE $noChange = false$
-   \ENDIF
-   \ENDFOR
-   \UNTIL{$noChange$ is $true$}
+\STATE \textbf{Encode the input image.}\\
+Input the image $I$ into the SAM encoder.\\
+Obtain the feature map $F$ of size $256 \times 64 \times 64$.\\
+
+\STATE \textbf{Decode the feature map.}\\
+Pass $F$ through the decoder, utilizing residual connections and transposed convolution.\\
+Obtain the decoded depth map $\tilde{D}$ of size $256 \times 256$.\\
+
+\STATE \textbf{Resize the output feature.}\\
+Resize the target depth map $\tilde{D}$ to $\hat{D}$ of size $H \times W$ using bilinear interpolation.\\
+
+\STATE \textbf{Compute the loss.}\\
+Apply the Mean Squared Error (MSE) loss function between $\hat{D}$ and the target depth map $D$:\\
+
+\[
+\mathcal{L}_{\text{MSE}} = \frac{1}{n} \sum_{i=1}^n (\hat{D}_i - D_i)^2
+\]
+
+\STATE \textbf{Backpropagate and update.}\\
+Use the computed loss $\mathcal{L}_{\text{MSE}}$ to backpropagate through the network and update the model parameters.\\
+
 \end{algorithmic}
 \end{algorithm}
 
-\subsection{Tables}
+\section{Experiments}
 
-You may also want to include tables that summarize material. Like
-figures, these should be centered, legible, and numbered consecutively.
-However, place the title \emph{above} the table with at least
-0.1~inches of space before the title and the same after it, as in
-Table~\ref{sample-table}. The table title should be set in 9~point
-type and centered unless it runs two or more lines, in which case it
-should be flush left.
+\subsection{Dataset}
 
-% Note use of \abovespace and \belowspace to get reasonable spacing
-% above and below tabular lines.
+We use \href{https://cs.nyu.edu/~fergus/datasets/nyu_depth_v2.html}{NYU Depth Dataset V2} \cite{NYU-Depth-V2-Dataset}. NYU Depth Dataset V2 is a widely-used dataset for research in 3D computer vision, particularly focusing on tasks like depth estimation and indoor scene understanding. It provides paired RGB images and depth maps collected using a Microsoft Kinect sensor in indoor environments.
 
-\begin{table}[t]
-\caption{Classification accuracies for naive Bayes and flexible
-Bayes on various data sets.}
-\label{sample-table}
-\vskip 0.15in
-\begin{center}
-\begin{small}
-\begin{sc}
-\begin{tabular}{lcccr}
-\toprule
-Data set & Naive & Flexible & Better? \\
-\midrule
-Breast    & 95.9$\pm$ 0.2& 96.7$\pm$ 0.2& $\surd$ \\
-Cleveland & 83.3$\pm$ 0.6& 80.0$\pm$ 0.6& $\times$\\
-Glass2    & 61.9$\pm$ 1.4& 83.8$\pm$ 0.7& $\surd$ \\
-Credit    & 74.8$\pm$ 0.5& 78.3$\pm$ 0.6&         \\
-Horse     & 73.3$\pm$ 0.9& 69.7$\pm$ 1.0& $\times$\\
-Meta      & 67.1$\pm$ 0.6& 76.5$\pm$ 0.5& $\surd$ \\
-Pima      & 75.1$\pm$ 0.6& 73.9$\pm$ 0.5&         \\
-Vehicle   & 44.9$\pm$ 0.6& 61.5$\pm$ 0.4& $\surd$ \\
-\bottomrule
+Data augmentation techniques such as random cropping and flipping are also applied. The dataset is split into 90\% for training, 9\% for validation, and 1\% for testing.
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=0.5\textwidth]{nyu-depth-v2.jpg}
+\label{fig:nyu-depth-v2}
+\end{figure}
+
+\subsection{Experimental design}
+
+The model is trained using the Adam optimizer with a learning rate of 0.001 and a batch size of 4 for 1 epochs. The parameters of the pre-trained SAM backbone are frozen during training. The Mean Squared Error (MSE) is used as a loss function. Experiments are conducted on an NVIDIA L4 GPU in Colab Pro with PyTorch. The training was restricted to a single epoch due to limited GPU resources. 
+
+\subsection{Results}
+
+To evaluate the performance of our depth estimation model, we use Depth-Anything-V2-Small as our baseline for comparison, which is one of the state-of-the-art models. We use Absolute Relative Error (Abs Rel) and Root Mean Squared Error (RMSE) as evaluation metrics. Abs Rel ensures fair evaluation across depths with its scale-invariant property, while RMSE highlights significant deviations by penalizing larger errors.
+
+{\small
+
+\begin{equation}
+    \textnormal{Abs Rel} = \frac{1}{N} \sum_{i=1}^{N} \frac{|D_i - \hat{D}_i|}{D_i}
+\end{equation}
+
+\begin{equation}
+    \textnormal{RMSE} = \sqrt{\frac{1}{N} \sum_{i=1}^{N} (D_i - \hat{D}_i)^2}
+\end{equation}
+
+}
+
+\begin{table}[ht]
+\centering
+\caption{Comparison of the model performance}
+\label{tab:quantitative-results}
+\begin{tabular}{|l|c|c|}
+\hline
+\textbf{Model}                 & \textbf{Abs Rel} & \textbf{RMSE} \\ \hline
+Depth-Anything-V2-small        & \textbf{0.253}                      & \textbf{0.107}                         \\ \hline
+Ours                  & 0.463             & 0.131                \\ \hline
 \end{tabular}
-\end{sc}
-\end{small}
-\end{center}
-\vskip -0.1in
 \end{table}
 
-Tables contain textual material, whereas figures contain graphical material.
-Specify the contents of each row and column in the table's topmost
-row. Again, you may float tables to a column's top or bottom, and set
-wide tables across both columns. Place two-column tables at the
-top or bottom of the page.
+Next, we present qualitative comparisons of depth estimation results. Each figure consists of input RGB images, predicted depth maps from our method, predictions from Depth-Anything-V2-Small, and the corresponding ground truth depth maps.
 
-\subsection{Citations and References}
+\begin{figure}[ht]
+\centering
+\includegraphics[width=0.5\textwidth]{model-comparison.png}
+\caption{Model Comparison}
+\label{fig:model-comparison}
+\end{figure}
 
-Please use APA reference format regardless of your formatter
-or word processor. If you rely on the \LaTeX\/ bibliographic
-facility, use \texttt{natbib.sty} and \texttt{icml2019.bst}
-included in the style-file package to obtain this format.
+\section{Discussion}
 
-Citations within the text should include the authors' last names and
-year. If the authors' names are included in the sentence, place only
-the year in parentheses, for example when referencing Arthur Samuel's
-pioneering work \yrcite{Samuel59}. Otherwise place the entire
-reference in parentheses with the authors and year separated by a
-comma \cite{Samuel59}. List multiple references separated by
-semicolons \cite{kearns89,Samuel59,mitchell80}. Use the `et~al.'
-construct only for citations with three or more authors or after
-listing all authors to a publication in an earlier reference \cite{MachineLearningI}.
+\subsection{Analysis}
 
-Authors should cite their own work in the third person
-in the initial version of their paper submitted for blind review.
-Please refer to Section~\ref{author info} for detailed instructions on how to
-cite your own papers.
+Our method showed inferior results compared to Depth-Anything-V2-Small in both quantitative and qualitative results. 
 
-Use an unnumbered first-level section heading for the references, and use a
-hanging indent style, with the first line of the reference flush against the
-left margin and subsequent lines indented by 10 points. The references at the
-end of this document give examples for journal articles \cite{Samuel59},
-conference publications \cite{langley00}, book chapters \cite{Newell81}, books
-\cite{DudaHart2nd}, edited volumes \cite{MachineLearningI}, technical reports
-\cite{mitchell80}, and dissertations \cite{kearns89}.
+Our analysis indicates that the Segment Anything model, used as a pre-trained backbone, demonstrates a tendency to predict different depths for different objects. This behavior is likely reflects the intuition that spatial similarity implies similar depth. While this approach is effective to capture spatial relationships, it also has a limitation: Different adjacent objects with similar depths may not be correctly modeled. For example, the first image in Figure 2 \ref{fig:model-comparison}, the pre-trained model tends to overemphasize object differentiation, leading to incorrect depth predictions.
 
-Alphabetize references by the surnames of the first authors, with
-single author entries preceding multiple author entries. Order
-references for the same authors by year of publication, with the
-earliest first. Make sure that each reference includes all relevant
-information (e.g., page numbers).
+Another issue observed in the predicted depth maps is their uneven and bumpy appearance, particularly in regions that are expected to exhibit smooth depth transitions. It is likely influenced by the simplicity of the loss function used during training. The Mean Squared Error (MSE) loss, while effective for minimizing pixel-wise differences between predictions and ground truth, does not explicitly enforce spatial smoothness or continuity in the depth map. As a result, the model may struggle to capture globally consistent depth information, leading to localized irregularities.
 
-Please put some effort into making references complete, presentable, and
-consistent. If using bibtex, please protect capital letters of names and
-abbreviations in titles, for example, use \{B\}ayesian or \{L\}ipschitz
-in your .bib file.
+Main reason for the low performance of our approach is the significant computational cost involved, which exceeded our available resources. This limitation restricted the model's training process, resulting in unsatisfactory depth predictions.
 
-\subsection{Software and Data}
+\subsection{Future direction}
 
-We strongly encourage the publication of software and data with the
-camera-ready version of the paper whenever appropriate. This can be
-done by including a URL in the camera-ready copy. However, do not
-include URLs that reveal your institution or identity in your
-submission for review. Instead, provide an anonymous URL or upload
-the material as ``Supplementary Material'' into the CMT reviewing
-system. Note that reviewers are not required to look at this material
-when writing their review.
+Our findings indicate that SAM, while effective for segmentation tasks, may not be inherently optimized for depth estimation. Future work should focus on identifying and leveraging pre-trained models specifically designed or fine-tuned for depth estimation. This direction could provide more suitable feature representations, leading to improved depth predictions.
 
-% Acknowledgements should only appear in the accepted version.
-\section*{Acknowledgements}
+An important area for improvement is the design of the loss function. While the Mean Squared Error (MSE) loss is simple and efficient, it does not account for spatial continuity or structural consistency in the depth maps, likely contributing to the uneven predictions observed. Future work should explore more advanced loss functions that promote smoothness and structural alignment in depth predictions.
 
-\textbf{Do not} include acknowledgements in the initial version of
-the paper submitted for blind review.
+The computational cost of using SAM as a backbone was a significant limitation in this study. To overcome this, future efforts should focus on acquiring sufficient computational resources or employing resource-efficient techniques. And we should aim to train models on a broader range of datasets to improve the model's generalization capabilities. It can help the model adapt to different depth characteristics across diverse environments. 
 
-If a paper is accepted, the final camera-ready version can (and
-probably should) include acknowledgements. In this case, please
-place such acknowledgements in an unnumbered section at the
-end of the paper. Typically, this will include thanks to reviewers
-who gave useful comments, to colleagues who contributed to the ideas,
-and to funding agencies and corporate sponsors that provided financial
-support.
+\section{Conclusion}
 
+In this study, we explored the potential of using the Segment Anything Model (SAM) as a backbone for monocular depth estimation. While SAM demonstrates strong capabilities in object segmentation, our findings indicate that its application to depth estimation tasks faces notable challenges. 
 
-% In the unusual situation where you want a paper to appear in the
-% references without citing it in the main text, use \nocite
-\nocite{langley00}
+The limitations of our approach arise from SAM's segmentation-focused nature, which overemphasizes object boundaries and disrupts depth continuity. Additionally, the simplicity of Mean Squared Error (MSE) loss led to uneven depth predictions, lacking spatial smoothness and consistency. Limited computational resources further constrained the training process, affecting the model's lower performance.
 
+Despite these challenges, this work highlights the potential of leveraging pre-trained models for depth estimation tasks. Future research should focus on exploring pre-trained models optimized for depth-related tasks with depth-specific loss functions and addressing computational constraints when using pre-trained models.
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% DELETE THIS PART. DO NOT PLACE CONTENT AFTER THE REFERENCES!
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\appendix
-\section{Do \emph{not} have an appendix here}
-
-\textbf{\emph{Do not put content after the references.}}
-%
-Put anything that you might normally include after the references in a separate
-supplementary file.
-
-We recommend that you build supplementary material in a separate document.
-If you must create one PDF and cut it up, please be careful to use a tool that
-doesn't alter the margins, and that doesn't aggressively rewrite the PDF file.
-pdftk usually works fine.
-
-\textbf{Please do not use Apple's preview to cut off supplementary material.} In
-previous years it has altered margins, and created headaches at the camera-ready
-stage.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\bibliography{main}
+\bibliographystyle{icml2024}
+\clearpage
 
 \end{document}
-
-
-% This document was modified from the file originally made available by
-% Pat Langley and Andrea Danyluk for ICML-2K. This version was created
-% by Iain Murray in 2018, and modified by Alexandre Bouchard in
-% 2019. Previous contributors include Dan Roy, Lise Getoor and Tobias
-% Scheffer, which was slightly modified from the 2010 version by
-% Thorsten Joachims & Johannes Fuernkranz, slightly modified from the
-% 2009 version by Kiri Wagstaff and Sam Roweis's 2008 version, which is
-% slightly modified from Prasad Tadepalli's 2007 version which is a
-% lightly changed version of the previous year's version by Andrew
-% Moore, which was in turn edited from those of Kristian Kersting and
-% Codrina Lauth. Alex Smola contributed to the algorithmic style files.
